package net.nemerosa.ontrack.extension.indicators.portfolio

/**
 * Aggregation of all portfolios
 *
 * @property categories List of indicator categories to show for all portfolios
 */
class IndicatorPortfolioOfPortfolios(
        val categories: List<String>
)