@startuml

' https://docs.collibra.com/pages/viewpage.action?pageId=45365276

' TODO Dynamic indicators

class Project <<core>>

class Indicator<T> {
    value: T
    comment: String
}

Indicator -left-> Project: project "1"
Indicator -right-> IndicatorType: type "1"

class IndicatorType<T, C> {
    id: String
    shortName: String
    longName: String
    link: String
    valueConfig: C
}

IndicatorType -right-> IndicatorValueType: valueType "1"

IndicatorType --> IndicatorCategory: category "1"

IndicatorType -up-> IndicatorComputer: valueComputer "0..1"

class IndicatorCategory {
    id: String
    name: String
}

enum IndicatorStatus {
    GREEN
    YELLOW
    RED
}

interface IndicatorValueType<T, C> {
    form(value: T?): Form
    status(config: C, value: T): IndicatorStatus
}

IndicatorValueType ..> IndicatorStatus

interface IndicatorComputer<T> {
    computeValue(project: Project): T
}

class IndicatorPortfolio {
    id: String
    name: String
    label: String?
}

IndicatorPortfolio --> IndicatorType: types "0..*"
IndicatorPortfolio ..> Project: linked to

class IndicatorPortfolioOfPortfolios

IndicatorPortfolioOfPortfolios --> IndicatorType: types "0..*"

class IndicatorStats {
    min: IndicatorStatus
    avg: IndicatorStatus
    max: IndicatorStatus
}

class IndicatorPortfolioStats

IndicatorPortfolioStats --> IndicatorType: type "1"
IndicatorPortfolioStats --up> IndicatorStats: stats "1"

@enduml